--- a/extensions/system/theme/less/uikit/overlay.less
+++ b/extensions/system/theme/less/uikit/overlay.less
@@ -34,4 +34,8 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-overlay-misc() {}
+.hook-overlay-misc() {
+
+	.uk-overlay:hover { min-height: 100px; }
+
+}
